违禁词检查和过滤

--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--    SpringSecurity    -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--    myBatisPlus    -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -69,14 +71,22 @@
             <artifactId>utils</artifactId>
             <version>2.2</version>
         </dependency>
+        <!--    数据库连接池    -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.6</version>
+            <version>1.2.16</version>
         </dependency>
+        <!--    校验依赖    -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <!--    敏感词检查    -->
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>sensitive-word</artifactId>
+            <version>0.8.0</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
