--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,11 +5,16 @@ server:
   servlet:
     session:
       timeout: 1m
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:33060/campus_rental_platform?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: "RrOoOoTt!@#123."
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 1000MB
 
 token:
   sign: FF522206-CF91-E2BE-5762-2168F5202870
@@ -24,3 +29,5 @@ imagePath: "E:\\avatar\\"
 #      logic-delete-field: isDelete #默认deleted
 #      logic-delete-value: 1
 #      logic-not-delete-value: 0
+
+
