--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>sensitive-word</artifactId>
             <version>0.8.0</version>
         </dependency>
+        <!--    日期类型支持    -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.14.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
